--- a/course-service.properties
+++ b/course-service.properties
@@ -1,1 +1,20 @@
 welcome.message: hello mohsen good luck man
+
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/microservice_pilot_project?cachePrepStmts=true&useServerPrepStmts=true&rewriteBatchedStatements=true
+spring.datasource.username=root
+spring.datasource.password=4444Po
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=false
+
+
+#server.port=${SERVER.PORT:8083}
+#spring.jpa.properties.hibernate.formate_sql=true;
+#spring.jpa.properties.hibernate.jdbc.batch_size=500
+#spring.jpa.properties.hibernate.order_inserts=true
+#spring.jpa.properties.hibernate.generate_statistics=true
+
+
+
+
