--- a/subscription-service.properties
+++ b/subscription-service.properties
@@ -1,3 +1,7 @@
+
+courseUrl = "http://COURSE-SERVICE/course/"
+
+
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/microservice_pilot_project?cachePrepStmts=true&useServerPrepStmts=true&rewriteBatchedStatements=true
 spring.datasource.username=root
 spring.datasource.password=4444Po
