--- a/subscription-service.properties
+++ b/subscription-service.properties
@@ -1,5 +1,5 @@
 
-courseUrl = "http://COURSE-SERVICE/course/"
+courseUrl = "http://localhost:8083/course/"
 
 
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/microservice_pilot_project?cachePrepStmts=true&useServerPrepStmts=true&rewriteBatchedStatements=true
